--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://gitlab.com/ac-marcel/kms-encryption-tool#README",
   "dependencies": {
+    "aws-sdk": "^2.49.0",
     "electron": "^1.6.6"
   }
 }
