--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
+    "build": "rimraf kms-encryption-* && electron-packager . --platform=win32 --arch=x64 --icon=logo",
     "start": "electron ."
   },
   "repository": {
@@ -19,6 +20,11 @@
   "homepage": "https://gitlab.com/ac-marcel/kms-encryption-tool#README",
   "dependencies": {
     "aws-sdk": "^2.49.0",
-    "electron": "^1.6.6"
+    "electron": "^1.6.6",
+    "xmlhttprequest": "^1.8.0"
+  },
+  "devDependencies": {
+    "electron-packager": "^8.7.0",
+    "rimraf": "^2.6.1"
   }
 }
